hphp/test/slow/hhbbc/fcall_bad_arg_type.php.expectf
Catchable fatal error: Argument 1 passed to C::foo() must be an instance of int, null given in %s on line 15
